--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-whitelist": "^1.3.1",
         "cordova-sqlite-storage": "^2.1.1",
+        "fsevents": "^2.3.3",
         "ionic-angular": "3.8.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "node-sass": "^4.14.1",
         "rxjs": "5.4.3",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.18"
