--- a/package.json
+++ b/package.json
@@ -26,10 +26,8 @@
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.4.0",
         "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-ionic-webview": ">=2.2.0",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-whitelist": "^1.3.1",
-        "cordova-sqlite-storage": "^2.1.1",
         "fsevents": "^2.3.3",
         "ionic-angular": "3.8.0",
         "ionic-plugin-keyboard": "^2.2.1",
@@ -41,20 +39,22 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "^3.2.3",
+        "cordova-ios": "^6.3.0",
+        "cordova-plugin-ionic-webview": "^5.0.1",
         "typescript": "2.3.4"
     },
     "description": "An Ionic project",
     "cordova": {
         "plugins": {
-            "cordova-sqlite-storage": {},
             "cordova-plugin-device": {},
-            "cordova-plugin-ionic-webview": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-ionic-webview": {}
         },
         "platforms": [
-            "android"
+            "android",
+            "ios"
         ]
     }
 }
